--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">ApliFut</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menuEquipos">Equipos</string>
+    <string name="menuPartidos">Partidos</string>
+    <string name="menuOtro">otro</string>
 </resources>
