--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menuEquipos">Equipos</string>
     <string name="menuPartidos">Partidos</string>
+    <string name="menuMarcadores">Mis Marcadores</string>
     <string name="menuOtro">otro</string>
     <string name="PJ">PJ</string>
     <string name="G">G</string>
