"QR without Layout"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="GC">GC</string>
     <string name="DG">DG</string>
     <string name="Pts">Pts</string>
+    <string name="scan_canceled">Cancelado</string>
 
 </resources>
